// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Inkomen /> > with items from BBZ, TONK, TOZO > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _OverviewPage_47d7c0 _Inkomen_93f942"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Inkomen"
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="28px"
          viewBox="0 0 32 28"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <title>
            inkomen-icoon
          </title>
          <path
            d="M21,4 L21,0 L0,4 L0,28 L32,28 L32,4 L21,4 Z M28,18 L17,18 L17,14 L28,14 L28,18 Z M28,12 L15,12 L15,20 L28,20 L28,24 L4,24 L4,8 L28,8 L28,12 Z"
            id="Shape"
          />
          <rect
            height="2"
            id="Rectangle"
            width="3"
            x="18"
            y="15"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Home
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Inkomen
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <p>
        Op deze pagina vindt u informatie over uw uitkering en de ondersteuning die u krijgt omdat u weinig geld hebt.
      </p>
      <p>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/werk-inkomen"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
          Algemene informatie over Werk en Inkomen
        </a>
        <br />
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/werk-inkomen/contact/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
          Contact Werk en Inkomen
        </a>
      </p>
    </div>
    <section
      class="_SectionCollapsible_b93dc7 _SectionCollapsible_93f942"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="true"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Lopende aanvragen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <table
            class="_Table_a66dcc _Table_93f942"
          >
            <thead>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                />
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Datum aanvraag
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Status
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Aanvraag inkomen item 2
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum aanvraag:
                  </span>
                  <span>
                    14 juli 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Meer informatie
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Tozo 2 item
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum aanvraag:
                  </span>
                  <span>
                    14 juli 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Meer informatie
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Tonk 2 item
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum aanvraag:
                  </span>
                  <span>
                    14 juli 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Meer informatie
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
    <section
      class="_SectionCollapsible_b93dc7"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="false"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Eerdere aanvragen
        </button>
      </h3>
      <div
        aria-hidden="true"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <table
            class="_Table_a66dcc _Table_93f942"
          >
            <thead>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                />
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Datum aanvraag
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Datum besluit
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Bbz item
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum aanvraag:
                  </span>
                  <span>
                    14 juli 2022
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum besluit:
                  </span>
                  <span>
                    24 juli 2022
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Aanvraag inkomen item
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum aanvraag:
                  </span>
                  <span>
                    14 juli 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum besluit:
                  </span>
                  <span>
                    24 juli 2020
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Tozo 1 item
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum aanvraag:
                  </span>
                  <span>
                    14 juli 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum besluit:
                  </span>
                  <span>
                    24 juli 2020
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Tonk 1 item
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum aanvraag:
                  </span>
                  <span>
                    14 juli 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum besluit:
                  </span>
                  <span>
                    24 juli 2020
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
    <section
      class="_SectionCollapsible_b93dc7"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="false"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Uitkeringsspecificaties
        </button>
      </h3>
      <div
        aria-hidden="true"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <table
            class="_Table_a66dcc _SpecificationsTable_028dc4"
          >
            <thead>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                />
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Regeling
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Datum
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Documenten
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Specificatie Mei 2020
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Regeling:
                  </span>
                  <span>
                     
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum:
                  </span>
                  <span>
                    14 Mei 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Documenten:
                  </span>
                  <span
                    class="_DocumentLinkWrap_81c3b4"
                  >
                    <a
                      class="ams-link ams-link--standalone _DocumentLink_81c3b4 _MaRouterLink__no-default-underline_aa758a"
                      href="/wpi/document/id"
                    >
                      <span
                        class="_DocumentLinkIcon_81c3b4"
                      >
                        <span
                          class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                        >
                          <svg
                            focusable="false"
                            height="32px"
                            viewBox="0 0 32 32"
                            width="32px"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            <title>
                              download-icoon
                            </title>
                            <path
                              d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                            />
                          </svg>
                        </span>
                      </span>
                      PDF
                    </a>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
    <section
      class="_SectionCollapsible_b93dc7"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="false"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Jaaropgaven
        </button>
      </h3>
      <div
        aria-hidden="true"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <table
            class="_Table_a66dcc _SpecificationsTable_028dc4 _SpecificationsTable--annualStatements_028dc4"
          >
            <thead>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                />
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Datum
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Documenten
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Jaaropgave 2020
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum:
                  </span>
                  <span>
                    14 Juli 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Documenten:
                  </span>
                  <span
                    class="_DocumentLinkWrap_81c3b4"
                  >
                    <a
                      class="ams-link ams-link--standalone _DocumentLink_81c3b4 _MaRouterLink__no-default-underline_aa758a"
                      href="/wpi/document/id"
                    >
                      <span
                        class="_DocumentLinkIcon_81c3b4"
                      >
                        <span
                          class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                        >
                          <svg
                            focusable="false"
                            height="32px"
                            viewBox="0 0 32 32"
                            width="32px"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            <title>
                              download-icoon
                            </title>
                            <path
                              d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                            />
                          </svg>
                        </span>
                      </span>
                      PDF
                    </a>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`<Inkomen /> > without items from BBZ, TONK, TOZO > Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _OverviewPage_47d7c0 _Inkomen_93f942"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Inkomen"
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="28px"
          viewBox="0 0 32 28"
          width="32px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <title>
            inkomen-icoon
          </title>
          <path
            d="M21,4 L21,0 L0,4 L0,28 L32,28 L32,4 L21,4 Z M28,18 L17,18 L17,14 L28,14 L28,18 Z M28,12 L15,12 L15,20 L28,20 L28,24 L4,24 L4,8 L28,8 L28,12 Z"
            id="Shape"
          />
          <rect
            height="2"
            id="Rectangle"
            width="3"
            x="18"
            y="15"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Home
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Inkomen
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <p>
        Op deze pagina vindt u informatie over uw uitkering en de ondersteuning die u krijgt omdat u weinig geld hebt.
      </p>
      <p>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/werk-inkomen"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
          Algemene informatie over Werk en Inkomen
        </a>
        <br />
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/werk-inkomen/contact/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
          Contact Werk en Inkomen
        </a>
      </p>
    </div>
    <section
      class="_SectionCollapsible_b93dc7 _SectionCollapsible_93f942"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="true"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Lopende aanvragen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <p
            class="_NoItemsMessage_b93dc7"
          >
            U heeft op dit moment geen lopende aanvragen.
          </p>
        </div>
      </div>
    </section>
    <section
      class="_SectionCollapsible_b93dc7"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="false"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Eerdere aanvragen
        </button>
      </h3>
      <div
        aria-hidden="true"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <p
            class="_NoItemsMessage_b93dc7"
          >
            U heeft op dit moment geen eerdere aanvragen.
          </p>
        </div>
      </div>
    </section>
    <section
      class="_SectionCollapsible_b93dc7"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="false"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Uitkeringsspecificaties
        </button>
      </h3>
      <div
        aria-hidden="true"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <table
            class="_Table_a66dcc _SpecificationsTable_028dc4"
          >
            <thead>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                />
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Regeling
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Datum
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Documenten
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Specificatie Mei 2020
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Regeling:
                  </span>
                  <span>
                     
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum:
                  </span>
                  <span>
                    14 Mei 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Documenten:
                  </span>
                  <span
                    class="_DocumentLinkWrap_81c3b4"
                  >
                    <a
                      class="ams-link ams-link--standalone _DocumentLink_81c3b4 _MaRouterLink__no-default-underline_aa758a"
                      href="/wpi/document/id"
                    >
                      <span
                        class="_DocumentLinkIcon_81c3b4"
                      >
                        <span
                          class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                        >
                          <svg
                            focusable="false"
                            height="32px"
                            viewBox="0 0 32 32"
                            width="32px"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            <title>
                              download-icoon
                            </title>
                            <path
                              d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                            />
                          </svg>
                        </span>
                      </span>
                      PDF
                    </a>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
    <section
      class="_SectionCollapsible_b93dc7"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="false"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Jaaropgaven
        </button>
      </h3>
      <div
        aria-hidden="true"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <table
            class="_Table_a66dcc _SpecificationsTable_028dc4 _SpecificationsTable--annualStatements_028dc4"
          >
            <thead>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                />
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Datum
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Documenten
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayPropTitle_a66dcc"
                >
                  Jaaropgave 2020
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Datum:
                  </span>
                  <span>
                    14 Juli 2020
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Documenten:
                  </span>
                  <span
                    class="_DocumentLinkWrap_81c3b4"
                  >
                    <a
                      class="ams-link ams-link--standalone _DocumentLink_81c3b4 _MaRouterLink__no-default-underline_aa758a"
                      href="/wpi/document/id"
                    >
                      <span
                        class="_DocumentLinkIcon_81c3b4"
                      >
                        <span
                          class="ams-icon ams-icon--size-5 _LinkIcon_81c3b4"
                        >
                          <svg
                            focusable="false"
                            height="32px"
                            viewBox="0 0 32 32"
                            width="32px"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlns:xlink="http://www.w3.org/1999/xlink"
                          >
                            <title>
                              download-icoon
                            </title>
                            <path
                              d="M0,27.9962465 L32,27.9962465 L32,32 L0,32 L0,27.9962465 Z M22.36,14.0131373 L25.19,16.8357835 L16,26.0444166 L6.81,16.8357835 L9.64,14.0131373 L14,18.3772287 L14,-3.55271368e-15 L18,-3.55271368e-15 L18,18.3772287 L22.36,14.0131373 Z"
                            />
                          </svg>
                        </span>
                      </span>
                      PDF
                    </a>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;
